--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "saitejahospitalproject": "file:",
     "web-vitals": "^2.1.4"
   },
